# pysndbxbnjmnp

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  manual.yml  publish.yml
docs/: api.md  conf.py  index.md
src/: pysndbxbnjmnp.c
src/pysndbxbnjmnp/: __init__.py  pysndbxbnjmnp.pyx
tests/: test_all.py  tox.ini
