[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "pysndbxbnjmnp"
authors = [
    {name="Benjamin Partzsch", email="benjamin_partzsch@web.com"}
]
description = "My sandbox package"
readme = "README.rst"
requires-python = ">3.6"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/bnjmnp/pysndbxbnjmnp"
Documentation = "https://pysndbxbnjmnp.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "pysndbxbnjmnp.__version__"}

[tool.cibuildwheel]
# Skip building on CPython 3.6 on all platforms - because 3.6 it is causing issues.
skip = "cp36-*"

# Limit the created wheels for windows to AMD64.
[tool.cibuildwheel.windows]
archs = ["AMD64"]
